--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "popoplot"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Alessandro Pezzato <alessandro.pezzato@gmail.com>"]
 edition = "2018"
 
@@ -8,3 +8,5 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "1.5.0", features = ["full"] }
+tokio-stream = { version = "0.1.5" }
+tokio-util = { version = "0.6", features = ["codec"] }
