--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "popoplot"
 version = "0.2.0"
 authors = ["Alessandro Pezzato <alessandro.pezzato@gmail.com>"]
 edition = "2018"
+license = "MIT"
+keywords = ["visualization", "plotting", "drawing"]
+repository = "https://github.com/alepez/popoplot"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
