--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ exclude = [
 tokio = { version = "1.5.0", features = ["full"] }
 tokio-stream = { version = "0.1.5" }
 tokio-util = { version = "0.6", features = ["codec"] }
+structopt = "0.3.21"
