--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ tokio-stream = { version = "0.1.5" }
 tokio-util = { version = "0.6", features = ["codec"] }
 structopt = "0.3.21"
 plotters = { version = "0.3.0" }
+plotters-backend = { version = "0.3.0" }
